Fix: alignment is off

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11682,8 +11682,8 @@ a.text-dark:focus {
 }
 
 #resultBasefree-female-11 {
-  top: 9%;
-  left: 16%;
+  top: 19px;
+  left: 31px;
 }
 
 #resultBasefree-female-11 > img {
@@ -11848,8 +11848,8 @@ a.text-dark:focus {
 #resultHairfree-female-11 {
   -webkit-transform: rotateY(-180deg);
   transform: rotateY(-180deg);
-    left: 155px;
-    top: 6px;
+    left: 145px;
+    top: 3px;
 }
 
 #resultHairfree-female-11 > img {
@@ -11968,8 +11968,8 @@ a.text-dark:focus {
 #resultEyesfree-female-11 {
     -webkit-transform: rotateY(-180deg);
     transform: rotateY(-180deg);
-    left: 177px;
-    top: 24px;
+    left: 168px;
+    top: 21px;
 }
 
 #resultEyesfree-female-11 > img {
@@ -12383,8 +12383,8 @@ a.text-dark:focus {
 #resultLipfree-female-11 {
   -webkit-transform: rotateY(-180deg);
    transform: rotateY(-180deg);
-    left: 181px;
-    top: 56px;
+    left: 172px;
+    top: 52px;
 }
 
 #resultLipfree-female-11 > img {
